--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -511,6 +511,7 @@ ul li {
 
 .row .grid-6 {
   width: 48.2%;
+  display: flex;
 }
 
 .row .grid-7 {
@@ -711,7 +712,7 @@ form input[type="submit"] {
 header.header div.header__bar.row div.grid-6 a.post {
   padding: 8px 20px;
   font-size: 14px;
-  border: 2px solid #57C3E9;
+  /* border: 2px solid #57C3E9; */
   color: #57C3E9;
   font-weight: bold;
   text-align: center;
